Jul 30, 2004

  * ADDED: rdf_atom_md5/3 for password encryption purposes.

Jul 29, 2004

  * ADDED: matching using the SeRQL compatible `like' operator.

Jul 22, 2004

  * ADDED: Namespace expansion in rdf(S,P,literal(type(xsd:int, 5))).
    Bug#170.  Sandro Hawke.

  * FIXED: rdf(X,X,X) and similar queries.

Jul 15, 2004

  * ENHANCED: Added triple garbage collector.  After Bug#161 by Sandro Hawke.

  * FIXED: Bug#160: rdf_safe_header/2 implementation and documentation.
    Sandro Hawke.

Jun 29, 2004

  * FIXED: rdf_split_url(+, +, -).  Bob Wielinga.

Jun 17, 2004

  * FIXED: pass base_uri option to rdf_load from rdfe_load to avoid clashes
    of bnodes.

Jun 16, 2004

  * FIXED: rdf(-,+,+) was indexed as rdf(-,+,-) if the object is a resource.

Jun 2, 2004

  * ADDED: rdf_is_bnode/1

May 22, 2004

  * FIXED: Literal string matching broken with introduction of
    language support. (Sandro Hawke)

Apr 23, 2004

  * ADDED: first version of lang and dataType support.  Improved test-suite

Apr 22, 2004

  * ADDED: Support for arbitrary Prolog values for `Object'.  This will be
    used to support xml:lang, rdf:dataType and XML literals.

Apr 11, 2004

  * FIXED: rdf:parseType="Collection": XML attribute value _always_ requires
    quotes.  Maarten Menken.

Apr 1, 2004

  * FIXED: Save toplevel anonymous resources unless anon(false) is provided
    in the option list of rdf_save/2.  Simon Price and Dan Brickley.

  * ADDED: Option list to rdf_save/2

Nov 29, 2003

  * FIXED: rdfs_individual_of(+, -) (only generated Resource).

Nov 20, 2003

  * FIXED: Avoid the use of typed nodes if the type-resource cannot be
    expressed as an XML name.

  * FIXED: non-determinism in rdf_node/1 and rdf_bnode/1.

Nov 17, 2003

  * FIXED: rdfs_subclass_of/2 to make all classes a subclass of rdfs:'Class'.

  * FIXED: rdf_save/[1,2] to handle XML escapes `value'
    in rdf:resource="value".

  * ADDED: rdf_bnode/1 to generate a blank node identifier as __bnode<N>
