@@ -1,3 +1,8 @@
+Aug 11, 2004
+
+  * FIXED: rdf_load_db/1 now updates the source registration
+    (rdf_source/1).
+
 Jul 30, 2004
 
   * ADDED: rdf_atom_md5/3 for password encryption purposes.
